# log-driven-development

./: .gitignore  README.md
tools/vibe/vibeaudit/: pyproject.toml
tools/vibe/vibeaudit/vibeaudit/: __init__.py  agent.py  agent_tools.py  baseline.py  cli.py  config.py  cost_tracker.py  extractor.py  feedback.py  history.py  models.py  prompt_loader.py  provider.py  scanner.py  vibereport.py
tools/vibe/vibeaudit/vibeaudit/prompts/: context.j2  system.j2
tools/vibe/vibeaudit/vibeaudit/providers/: __init__.py  anthropic_provider.py  azure_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
tools/vibe/vibeaudit/vibeaudit/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py  table_reporter.py
tools/vibe/vibeaudit/vibeaudit/reporters/templates/: report.html.j2
tools/vibe/vibeclean/: .vibeclean.yml  README.md  pyproject.toml
tools/vibe/vibeclean/vibeclean/: __init__.py  __main__.py  cli.py  config.py  models.py  scanner.py
tools/vibe/vibeclean/vibeclean/reporters/: __init__.py  base.py  json_reporter.py  markdown.py  table.py
tools/vibe/vibeclean/vibeclean/runners/: __init__.py  base.py  complexity.py  convention.py  dead_code.py  duplication.py  slop_detector.py
tools/vibe/vibedeploy/: README.md  pyproject.toml
tools/vibe/vibedeploy/vibedeploy/: __main__.py  checklist.py  cli.py  config.py  deduplicator.py  detector.py  fix_generator.py  history.py  installer.py  models.py  scanner.py
tools/vibe/vibedeploy/vibedeploy/ast_rules/: __init__.py
tools/vibe/vibedeploy/vibedeploy/ast_rules/javascript/: __init__.py  cors_wildcard.py  missing_graceful_shutdown.py  missing_helmet.py  process_env_no_fallback.py  source_maps_served.py
tools/vibe/vibedeploy/vibedeploy/ast_rules/python/: __init__.py  debug_mode.py  env_without_default.py  missing_health_check.py  orm_no_pool.py  (+1 more)
tools/vibe/vibedeploy/vibedeploy/normalisers/: ansible_lint.py  atlas.py  base.py  certigo.py  cfn_lint.py  checkov.py  cloudsplaining.py  conftest.py  detect_secrets.py  dive.py  dnsx.py  dockle.py  dotenv_linter.py  grype.py  hadolint.py  httpx_probe.py  jsonlint.py  kics.py  kubesec.py  kubeval.py  migra.py  nginx_tester.py  nova.py  npm_audit_prod.py  observatory.py  ossf_scorecard.py  pip_audit.py  pluto.py  polaris.py  popeye.py  prowler.py  scoutsuite.py  securityheaders.py  sqlfluff.py  squawk.py  steampipe.py  syft.py  terrascan.py  testssl.py  tfsec.py  (+3 more)
tools/vibe/vibedeploy/vibedeploy/reporters/: base.py  html.py  json_reporter.py  markdown.py  table.py
tools/vibe/vibedeploy/vibedeploy/runners/: __init__.py  ansible_lint.py  atlas.py  aws_vault.py  base.py  certigo.py  cfn_lint.py  chamber.py  checkov.py  cloudsplaining.py  conftest.py  connection_pool.py  cors_checker.py  cosign.py  debug_mode_checker.py  dependency_audit.py  detect_secrets.py  dive.py  dnsx.py  docker_bench.py  dockle.py  dotenv_linter.py  env_validator.py  flyway.py  git_secrets.py  gixy.py  graceful_shutdown.py  grype.py  hadolint.py  health_check_scanner.py  helm_lint.py  httpx_probe.py  jsonlint.py  kics.py  kube_score.py  kubectl_neat.py  kubesec.py  kubeval.py  license_checker.py  liquibase.py  (+46 more)
tools/vibe/viberapid/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
tools/vibe/viberapid/.github/workflows/: ci.yml
tools/vibe/viberapid/viberapid/: __init__.py  __main__.py  budget.py  cli.py  config.py  deduplicator.py  history.py  ignore.py  installer.py  models.py  quick_wins.py  scanner.py
tools/vibe/viberapid/viberapid/normalisers/: artillery.py  austin.py  autocannon.py  base.py  bombardier.py  brotli_size.py  bundle_analyzer.py  bundlephobia.py  bundlewatch.py  clinic.py  cost_of_modules.py  cssnano.py  depcheck.py  deptry.py  django_check.py  duplicate_packages.py  esbuild_bench.py  fil.py  fonttools_normaliser.py  glyphhanger.py  gzip_size.py  h2spec.py  hstspreload.py  hyperfine.py  imagemin.py  jscpd.py  k6.py  knip.py  lighthouse.py  locust.py  memray.py  million_lint.py  node_prof.py  npm_check.py  npm_check_updates.py  parker.py  pgbadger.py  pghero.py  pipdeptree.py  prisma_inspector.py  (+25 more)
tools/vibe/viberapid/viberapid/reporters/: __init__.py  base.py  html.py  json_reporter.py  markdown.py  table.py
tools/vibe/viberapid/viberapid/runners/: artillery.py  ast_analyser.py  austin.py  autocannon.py  base.py  bombardier.py  brotli_size.py  bundle_analyzer.py  bundlephobia.py  bundlewatch.py  clinic.py  cost_of_modules.py  cssnano.py  depcheck.py  deptry.py  django_check.py  duplicate_packages.py  esbuild_bench.py  fil.py  fonttools_runner.py  glyphhanger.py  gzip_size.py  h2spec.py  hstspreload.py  hyperfine.py  imagemin.py  jscpd.py  k6.py  knip.py  lighthouse.py  locust.py  memray.py  million_lint.py  node_prof.py  npm_check.py  npm_check_updates.py  parker.py  pgbadger.py  pghero.py  pipdeptree.py  (+26 more)
tools/vibe/vibescan/: .secrets.baseline  .vibescan.yml  CONTRIBUTING.md  README.md  pyproject.toml
tools/vibe/vibescan/vibescan/: __init__.py  __main__.py  baseline.py  cli.py  config.py  deduplicator.py  history.py  installer.py  models.py  scanner.py
tools/vibe/vibescan/vibescan/normalisers/: bandit.py  base.py  codeql.py  detect_secrets.py  gitleaks.py  grype.py  kics.py  licence.py  npm_audit.py  pip_audit.py  semgrep.py  snyk.py  trivy.py  trufflehog.py
tools/vibe/vibescan/vibescan/reporters/: __init__.py  base.py  html.py  json_reporter.py  markdown.py  sarif.py  table.py
tools/vibe/vibescan/vibescan/runners/: __init__.py  bandit.py  base.py  codeql.py  detect_secrets.py  gitleaks.py  grype.py  kics.py  licence.py  npm_audit.py  pip_audit.py  semgrep.py  snyk.py  trivy.py  trufflehog.py
tools/vibe/vibetest/: .vibetest.yml  README.md  pyproject.toml
tools/vibe/vibetest/vibetest/: __init__.py  __main__.py  cli.py  config.py  models.py  scanner.py
tools/vibe/vibetest/vibetest/reporters/: __init__.py  base.py  json_reporter.py  markdown.py  table.py
tools/vibe/vibetest/vibetest/runners/: __init__.py  assertion_checker.py  base.py  coverage_analyzer.py  flaky_detector.py  missing_tests.py  test_smell.py
(+152 files in other folders)
