[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibeaudit"
version = "0.1.0"
description = "AI-powered security scanner that catches business logic vulnerabilities"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1,<9",
    "rich>=13.0,<14",
    "pydantic>=2.5,<3",
    "jinja2>=3.1,<4",
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "gitpython>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]
treesitter = [
    "tree-sitter>=0.23,<1",
    "tree-sitter-languages>=1.10,<2",
]

[project.scripts]
vibeaudit = "vibeaudit.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
source = ["vibeaudit"]

[tool.coverage.report]
fail_under = 70
