[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibeclean"
version = "0.1.0"
description = "Detect AI-generated code slop, spaghetti, and hygiene issues"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "vibeclean contributors" }]
keywords = ["code-quality", "linter", "vibe-coding", "slop-detector", "hygiene"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
vibeclean = "vibeclean.cli:main"

[project.urls]
Homepage = "https://github.com/vibeclean/vibeclean"
Repository = "https://github.com/vibeclean/vibeclean"
Issues = "https://github.com/vibeclean/vibeclean/issues"

[tool.hatch.build.targets.wheel]
packages = ["vibeclean"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
