[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibedeploy"
version = "0.1.0"
description = "Pre-deploy readiness analyzer for AI-generated codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "vibedeploy contributors" }]
keywords = ["deploy", "readiness", "vibe-coding", "infrastructure", "security", "docker", "kubernetes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "aiohttp>=3.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.scripts]
vibedeploy = "vibedeploy.cli:main"

[project.urls]
Homepage = "https://github.com/vibedeploy/vibedeploy"
Repository = "https://github.com/vibedeploy/vibedeploy"
Issues = "https://github.com/vibedeploy/vibedeploy/issues"

[tool.hatch.build.targets.wheel]
packages = ["vibedeploy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
