[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viberapid"
version = "0.1.0"
description = "The definitive performance analyser for AI-generated codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "viberapid contributors" }]
keywords = ["performance", "analyser", "vibe-coding", "lighthouse", "bundle", "load-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "aiohttp>=3.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "nodeenv>=1.8",
    "pathspec>=0.12",
]

[project.scripts]
viberapid = "viberapid.cli:main"

[project.urls]
Homepage = "https://github.com/viberapid/viberapid"
Repository = "https://github.com/viberapid/viberapid"
Issues = "https://github.com/viberapid/viberapid/issues"

[tool.hatch.build.targets.wheel]
packages = ["viberapid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
