[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibescan"
version = "0.1.0"
description = "The definitive security scanner for AI-generated codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "vibescan contributors" }]
keywords = ["security", "scanner", "vibe-coding", "sast", "secrets", "cve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "aiohttp>=3.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.scripts]
vibescan = "vibescan.cli:main"

[project.urls]
Homepage = "https://github.com/vibescan/vibescan"
Repository = "https://github.com/vibescan/vibescan"
Issues = "https://github.com/vibescan/vibescan/issues"

[tool.hatch.build.targets.wheel]
packages = ["vibescan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
