[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibetest"
version = "0.1.0"
description = "Test quality auditor for AI-generated codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "vibetest contributors" }]
keywords = ["testing", "quality", "vibe-coding", "audit", "coverage", "test-smells"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
vibetest = "vibetest.cli:main"

[project.urls]
Homepage = "https://github.com/vibetest/vibetest"
Repository = "https://github.com/vibetest/vibetest"
Issues = "https://github.com/vibetest/vibetest/issues"

[tool.hatch.build.targets.wheel]
packages = ["vibetest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
